Compiler Design/Banik/practice2/parser.output
Terminals which are not used

   CONTINUE
   BREAK


State 23 conflicts: 2 shift/reduce


Grammar

    0 $accept: code $end

    1 code: code function
    2     | code declaration SEMI
    3     | /* empty */

    4 statements: statements statement
    5           | /* empty */

    6 statement: declaration SEMI
    7          | if_statement
    8          | for_statement
    9          | while_statement
   10          | assignment SEMI
   11          | function_call SEMI
   12          | PRINTF LPAREN STRING RPAREN SEMI
   13          | ID INCR SEMI
   14          | INCR ID SEMI
   15          | ID DECR SEMI
   16          | DECR ID SEMI
   17          | RETURN expression SEMI

   18 function: type ID LPAREN parameters RPAREN LBRACE statements RBRACE

   19 parameters: params
   20           | /* empty */

   21 params: params COMMA type ID
   22       | type ID

   23 declaration: type variables

   24 variables: variables COMMA ID
   25          | variables COMMA ID ASSIGN expression
   26          | ID
   27          | ID ASSIGN expression

   28 type: INT
   29     | CHAR
   30     | DOUBLE
   31     | VOID

   32 if_statement: IF LPAREN expression RPAREN LBRACE statements RBRACE
   33             | IF LPAREN expression RPAREN LBRACE statements RBRACE else_if
   34             | IF LPAREN expression RPAREN LBRACE statements RBRACE else_if ELSE LBRACE statements RBRACE
   35             | IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

   36 else_if: else_if ELSE IF LPAREN expression RPAREN LBRACE statements RBRACE
   37        | ELSE IF LPAREN expression RPAREN LBRACE statements RBRACE

   38 for_statement: FOR LPAREN initalization SEMI condition SEMI increments RPAREN LBRACE statements RBRACE

   39 initalization: declaration
   40              | assignments
   41              | /* empty */

   42 assignments: assignments COMMA assignment
   43            | assignment

   44 condition: expression
   45          | /* empty */

   46 increments: increments COMMA increment
   47           | increment

   48 increment: ID INCR
   49          | INCR ID
   50          | ID DECR
   51          | DECR ID

   52 while_statement: WHILE LPAREN expression RPAREN LBRACE statements RBRACE

   53 assignment: ID ASSIGN expression

   54 function_call: ID LPAREN arguments RPAREN

   55 arguments: arguments args
   56          | /* empty */

   57 args: args COMMA expression
   58     | args COMMA STRING
   59     | expression
   60     | STRING

   61 expression: expression OROP exp
   62           | expression ANDOP exp
   63           | expression EQUOP exp
   64           | expression NEQUOP exp
   65           | expression GTEQ exp
   66           | expression GT exp
   67           | expression LTEQ exp
   68           | expression LT exp
   69           | exp

   70 exp: exp ADDOP term
   71    | exp SUBOP term
   72    | term

   73 term: term MULOP factor
   74     | term DIVOP factor
   75     | factor

   76 factor: ID INCR
   77       | ID DECR
   78       | INCR ID
   79       | DECR ID
   80       | ID
   81       | ICONST
   82       | FCONST
   83       | CCONST
   84       | LPAREN exp RPAREN
   85       | NOTOP factor


Terminals, with rules where they appear

$end (0) 0
error (256)
CHAR (258) 29
INT (259) 28
DOUBLE (260) 30
IF (261) 32 33 34 35 36 37
ELSE (262) 34 35 36 37
WHILE (263) 52
FOR (264) 38
CONTINUE (265)
BREAK (266)
VOID (267) 31
RETURN (268) 17
PRINTF (269) 12
ADDOP (270) 70
SUBOP (271) 71
MULOP (272) 73
DIVOP (273) 74
INCR (274) 13 14 48 49 76 78
DECR (275) 15 16 50 51 77 79
OROP (276) 61
ANDOP (277) 62
NOTOP (278) 85
EQUOP (279) 63
NEQUOP (280) 64
GTEQ (281) 65
GT (282) 66
LTEQ (283) 67
LT (284) 68
LPAREN (285) 12 18 32 33 34 35 36 37 38 52 54 84
RPAREN (286) 12 18 32 33 34 35 36 37 38 52 54 84
LBRACE (287) 18 32 33 34 35 36 37 38 52
RBRACE (288) 18 32 33 34 35 36 37 38 52
SEMI (289) 2 6 10 11 12 13 14 15 16 17 38
ASSIGN (290) 25 27 53
COMMA (291) 21 24 25 42 46 57 58
ID (292) 13 14 15 16 18 21 22 24 25 26 27 48 49 50 51 53 54 76 77 78
    79 80
ICONST (293) 81
FCONST (294) 82
CCONST (295) 83
STRING (296) 12 58 60


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
code (43)
    on left: 1 2 3, on right: 0 1 2
statements (44)
    on left: 4 5, on right: 4 18 32 33 34 35 36 37 38 52
statement (45)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17, on right: 4
function (46)
    on left: 18, on right: 1
parameters (47)
    on left: 19 20, on right: 18
params (48)
    on left: 21 22, on right: 19 21
declaration (49)
    on left: 23, on right: 2 6 39
variables (50)
    on left: 24 25 26 27, on right: 23 24 25
type (51)
    on left: 28 29 30 31, on right: 18 21 22 23
if_statement (52)
    on left: 32 33 34 35, on right: 7
else_if (53)
    on left: 36 37, on right: 33 34 36
for_statement (54)
    on left: 38, on right: 8
initalization (55)
    on left: 39 40 41, on right: 38
assignments (56)
    on left: 42 43, on right: 40 42
condition (57)
    on left: 44 45, on right: 38
increments (58)
    on left: 46 47, on right: 38 46
increment (59)
    on left: 48 49 50 51, on right: 46 47
while_statement (60)
    on left: 52, on right: 9
assignment (61)
    on left: 53, on right: 10 42 43
function_call (62)
    on left: 54, on right: 11
arguments (63)
    on left: 55 56, on right: 54 55
args (64)
    on left: 57 58 59 60, on right: 55 57 58
expression (65)
    on left: 61 62 63 64 65 66 67 68 69, on right: 17 25 27 32 33 34
    35 36 37 44 52 53 57 59 61 62 63 64 65 66 67 68
exp (66)
    on left: 70 71 72, on right: 61 62 63 64 65 66 67 68 69 70 71 84
term (67)
    on left: 73 74 75, on right: 70 71 72 73 74
factor (68)
    on left: 76 77 78 79 80 81 82 83 84 85, on right: 73 74 75 85


state 0

    0 $accept: . code $end

    $default  reduce using rule 3 (code)

    code  go to state 1


state 1

    0 $accept: code . $end
    1 code: code . function
    2     | code . declaration SEMI

    $end    shift, and go to state 2
    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    function     go to state 7
    declaration  go to state 8
    type         go to state 9


state 2

    0 $accept: code $end .

    $default  accept


state 3

   29 type: CHAR .

    $default  reduce using rule 29 (type)


state 4

   28 type: INT .

    $default  reduce using rule 28 (type)


state 5

   30 type: DOUBLE .

    $default  reduce using rule 30 (type)


state 6

   31 type: VOID .

    $default  reduce using rule 31 (type)


state 7

    1 code: code function .

    $default  reduce using rule 1 (code)


state 8

    2 code: code declaration . SEMI

    SEMI  shift, and go to state 10


state 9

   18 function: type . ID LPAREN parameters RPAREN LBRACE statements RBRACE
   23 declaration: type . variables

    ID  shift, and go to state 11

    variables  go to state 12


state 10

    2 code: code declaration SEMI .

    $default  reduce using rule 2 (code)


state 11

   18 function: type ID . LPAREN parameters RPAREN LBRACE statements RBRACE
   26 variables: ID .
   27          | ID . ASSIGN expression

    LPAREN  shift, and go to state 13
    ASSIGN  shift, and go to state 14

    $default  reduce using rule 26 (variables)


state 12

   23 declaration: type variables .
   24 variables: variables . COMMA ID
   25          | variables . COMMA ID ASSIGN expression

    COMMA  shift, and go to state 15

    $default  reduce using rule 23 (declaration)


state 13

   18 function: type ID LPAREN . parameters RPAREN LBRACE statements RBRACE

    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $default  reduce using rule 20 (parameters)

    parameters  go to state 16
    params      go to state 17
    type        go to state 18


state 14

   27 variables: ID ASSIGN . expression

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    expression  go to state 27
    exp         go to state 28
    term        go to state 29
    factor      go to state 30


state 15

   24 variables: variables COMMA . ID
   25          | variables COMMA . ID ASSIGN expression

    ID  shift, and go to state 31


state 16

   18 function: type ID LPAREN parameters . RPAREN LBRACE statements RBRACE

    RPAREN  shift, and go to state 32


state 17

   19 parameters: params .
   21 params: params . COMMA type ID

    COMMA  shift, and go to state 33

    $default  reduce using rule 19 (parameters)


state 18

   22 params: type . ID

    ID  shift, and go to state 34


state 19

   78 factor: INCR . ID

    ID  shift, and go to state 35


state 20

   79 factor: DECR . ID

    ID  shift, and go to state 36


state 21

   85 factor: NOTOP . factor

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    factor  go to state 37


state 22

   84 factor: LPAREN . exp RPAREN

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 38
    term    go to state 29
    factor  go to state 30


state 23

   76 factor: ID . INCR
   77       | ID . DECR
   80       | ID .

    INCR  shift, and go to state 39
    DECR  shift, and go to state 40

    INCR      [reduce using rule 80 (factor)]
    DECR      [reduce using rule 80 (factor)]
    $default  reduce using rule 80 (factor)


state 24

   81 factor: ICONST .

    $default  reduce using rule 81 (factor)


state 25

   82 factor: FCONST .

    $default  reduce using rule 82 (factor)


state 26

   83 factor: CCONST .

    $default  reduce using rule 83 (factor)


state 27

   27 variables: ID ASSIGN expression .
   61 expression: expression . OROP exp
   62           | expression . ANDOP exp
   63           | expression . EQUOP exp
   64           | expression . NEQUOP exp
   65           | expression . GTEQ exp
   66           | expression . GT exp
   67           | expression . LTEQ exp
   68           | expression . LT exp

    OROP    shift, and go to state 41
    ANDOP   shift, and go to state 42
    EQUOP   shift, and go to state 43
    NEQUOP  shift, and go to state 44
    GTEQ    shift, and go to state 45
    GT      shift, and go to state 46
    LTEQ    shift, and go to state 47
    LT      shift, and go to state 48

    $default  reduce using rule 27 (variables)


state 28

   69 expression: exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 69 (expression)


state 29

   72 exp: term .
   73 term: term . MULOP factor
   74     | term . DIVOP factor

    MULOP  shift, and go to state 51
    DIVOP  shift, and go to state 52

    $default  reduce using rule 72 (exp)


state 30

   75 term: factor .

    $default  reduce using rule 75 (term)


state 31

   24 variables: variables COMMA ID .
   25          | variables COMMA ID . ASSIGN expression

    ASSIGN  shift, and go to state 53

    $default  reduce using rule 24 (variables)


state 32

   18 function: type ID LPAREN parameters RPAREN . LBRACE statements RBRACE

    LBRACE  shift, and go to state 54


state 33

   21 params: params COMMA . type ID

    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    type  go to state 55


state 34

   22 params: type ID .

    $default  reduce using rule 22 (params)


state 35

   78 factor: INCR ID .

    $default  reduce using rule 78 (factor)


state 36

   79 factor: DECR ID .

    $default  reduce using rule 79 (factor)


state 37

   85 factor: NOTOP factor .

    $default  reduce using rule 85 (factor)


state 38

   70 exp: exp . ADDOP term
   71    | exp . SUBOP term
   84 factor: LPAREN exp . RPAREN

    ADDOP   shift, and go to state 49
    SUBOP   shift, and go to state 50
    RPAREN  shift, and go to state 56


state 39

   76 factor: ID INCR .

    $default  reduce using rule 76 (factor)


state 40

   77 factor: ID DECR .

    $default  reduce using rule 77 (factor)


state 41

   61 expression: expression OROP . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 57
    term    go to state 29
    factor  go to state 30


state 42

   62 expression: expression ANDOP . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 58
    term    go to state 29
    factor  go to state 30


state 43

   63 expression: expression EQUOP . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 59
    term    go to state 29
    factor  go to state 30


state 44

   64 expression: expression NEQUOP . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 60
    term    go to state 29
    factor  go to state 30


state 45

   65 expression: expression GTEQ . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 61
    term    go to state 29
    factor  go to state 30


state 46

   66 expression: expression GT . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 62
    term    go to state 29
    factor  go to state 30


state 47

   67 expression: expression LTEQ . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 63
    term    go to state 29
    factor  go to state 30


state 48

   68 expression: expression LT . exp

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    exp     go to state 64
    term    go to state 29
    factor  go to state 30


state 49

   70 exp: exp ADDOP . term

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    term    go to state 65
    factor  go to state 30


state 50

   71 exp: exp SUBOP . term

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    term    go to state 66
    factor  go to state 30


state 51

   73 term: term MULOP . factor

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    factor  go to state 67


state 52

   74 term: term DIVOP . factor

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    factor  go to state 68


state 53

   25 variables: variables COMMA ID ASSIGN . expression

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    expression  go to state 69
    exp         go to state 28
    term        go to state 29
    factor      go to state 30


state 54

   18 function: type ID LPAREN parameters RPAREN LBRACE . statements RBRACE

    $default  reduce using rule 5 (statements)

    statements  go to state 70


state 55

   21 params: params COMMA type . ID

    ID  shift, and go to state 71


state 56

   84 factor: LPAREN exp RPAREN .

    $default  reduce using rule 84 (factor)


state 57

   61 expression: expression OROP exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 61 (expression)


state 58

   62 expression: expression ANDOP exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 62 (expression)


state 59

   63 expression: expression EQUOP exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 63 (expression)


state 60

   64 expression: expression NEQUOP exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 64 (expression)


state 61

   65 expression: expression GTEQ exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 65 (expression)


state 62

   66 expression: expression GT exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 66 (expression)


state 63

   67 expression: expression LTEQ exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 67 (expression)


state 64

   68 expression: expression LT exp .
   70 exp: exp . ADDOP term
   71    | exp . SUBOP term

    ADDOP  shift, and go to state 49
    SUBOP  shift, and go to state 50

    $default  reduce using rule 68 (expression)


state 65

   70 exp: exp ADDOP term .
   73 term: term . MULOP factor
   74     | term . DIVOP factor

    MULOP  shift, and go to state 51
    DIVOP  shift, and go to state 52

    $default  reduce using rule 70 (exp)


state 66

   71 exp: exp SUBOP term .
   73 term: term . MULOP factor
   74     | term . DIVOP factor

    MULOP  shift, and go to state 51
    DIVOP  shift, and go to state 52

    $default  reduce using rule 71 (exp)


state 67

   73 term: term MULOP factor .

    $default  reduce using rule 73 (term)


state 68

   74 term: term DIVOP factor .

    $default  reduce using rule 74 (term)


state 69

   25 variables: variables COMMA ID ASSIGN expression .
   61 expression: expression . OROP exp
   62           | expression . ANDOP exp
   63           | expression . EQUOP exp
   64           | expression . NEQUOP exp
   65           | expression . GTEQ exp
   66           | expression . GT exp
   67           | expression . LTEQ exp
   68           | expression . LT exp

    OROP    shift, and go to state 41
    ANDOP   shift, and go to state 42
    EQUOP   shift, and go to state 43
    NEQUOP  shift, and go to state 44
    GTEQ    shift, and go to state 45
    GT      shift, and go to state 46
    LTEQ    shift, and go to state 47
    LT      shift, and go to state 48

    $default  reduce using rule 25 (variables)


state 70

    4 statements: statements . statement
   18 function: type ID LPAREN parameters RPAREN LBRACE statements . RBRACE

    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    IF      shift, and go to state 72
    WHILE   shift, and go to state 73
    FOR     shift, and go to state 74
    VOID    shift, and go to state 6
    RETURN  shift, and go to state 75
    PRINTF  shift, and go to state 76
    INCR    shift, and go to state 77
    DECR    shift, and go to state 78
    RBRACE  shift, and go to state 79
    ID      shift, and go to state 80

    statement        go to state 81
    declaration      go to state 82
    type             go to state 83
    if_statement     go to state 84
    for_statement    go to state 85
    while_statement  go to state 86
    assignment       go to state 87
    function_call    go to state 88


state 71

   21 params: params COMMA type ID .

    $default  reduce using rule 21 (params)


state 72

   32 if_statement: IF . LPAREN expression RPAREN LBRACE statements RBRACE
   33             | IF . LPAREN expression RPAREN LBRACE statements RBRACE else_if
   34             | IF . LPAREN expression RPAREN LBRACE statements RBRACE else_if ELSE LBRACE statements RBRACE
   35             | IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN  shift, and go to state 89


state 73

   52 while_statement: WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 90


state 74

   38 for_statement: FOR . LPAREN initalization SEMI condition SEMI increments RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 91


state 75

   17 statement: RETURN . expression SEMI

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    expression  go to state 92
    exp         go to state 28
    term        go to state 29
    factor      go to state 30


state 76

   12 statement: PRINTF . LPAREN STRING RPAREN SEMI

    LPAREN  shift, and go to state 93


state 77

   14 statement: INCR . ID SEMI

    ID  shift, and go to state 94


state 78

   16 statement: DECR . ID SEMI

    ID  shift, and go to state 95


state 79

   18 function: type ID LPAREN parameters RPAREN LBRACE statements RBRACE .

    $default  reduce using rule 18 (function)


state 80

   13 statement: ID . INCR SEMI
   15          | ID . DECR SEMI
   53 assignment: ID . ASSIGN expression
   54 function_call: ID . LPAREN arguments RPAREN

    INCR    shift, and go to state 96
    DECR    shift, and go to state 97
    LPAREN  shift, and go to state 98
    ASSIGN  shift, and go to state 99


state 81

    4 statements: statements statement .

    $default  reduce using rule 4 (statements)


state 82

    6 statement: declaration . SEMI

    SEMI  shift, and go to state 100


state 83

   23 declaration: type . variables

    ID  shift, and go to state 101

    variables  go to state 12


state 84

    7 statement: if_statement .

    $default  reduce using rule 7 (statement)


state 85

    8 statement: for_statement .

    $default  reduce using rule 8 (statement)


state 86

    9 statement: while_statement .

    $default  reduce using rule 9 (statement)


state 87

   10 statement: assignment . SEMI

    SEMI  shift, and go to state 102


state 88

   11 statement: function_call . SEMI

    SEMI  shift, and go to state 103


state 89

   32 if_statement: IF LPAREN . expression RPAREN LBRACE statements RBRACE
   33             | IF LPAREN . expression RPAREN LBRACE statements RBRACE else_if
   34             | IF LPAREN . expression RPAREN LBRACE statements RBRACE else_if ELSE LBRACE statements RBRACE
   35             | IF LPAREN . expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    expression  go to state 104
    exp         go to state 28
    term        go to state 29
    factor      go to state 30


state 90

   52 while_statement: WHILE LPAREN . expression RPAREN LBRACE statements RBRACE

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    expression  go to state 105
    exp         go to state 28
    term        go to state 29
    factor      go to state 30


state 91

   38 for_statement: FOR LPAREN . initalization SEMI condition SEMI increments RPAREN LBRACE statements RBRACE

    CHAR    shift, and go to state 3
    INT     shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6
    ID      shift, and go to state 106

    $default  reduce using rule 41 (initalization)

    declaration    go to state 107
    type           go to state 83
    initalization  go to state 108
    assignments    go to state 109
    assignment     go to state 110


state 92

   17 statement: RETURN expression . SEMI
   61 expression: expression . OROP exp
   62           | expression . ANDOP exp
   63           | expression . EQUOP exp
   64           | expression . NEQUOP exp
   65           | expression . GTEQ exp
   66           | expression . GT exp
   67           | expression . LTEQ exp
   68           | expression . LT exp

    OROP    shift, and go to state 41
    ANDOP   shift, and go to state 42
    EQUOP   shift, and go to state 43
    NEQUOP  shift, and go to state 44
    GTEQ    shift, and go to state 45
    GT      shift, and go to state 46
    LTEQ    shift, and go to state 47
    LT      shift, and go to state 48
    SEMI    shift, and go to state 111


state 93

   12 statement: PRINTF LPAREN . STRING RPAREN SEMI

    STRING  shift, and go to state 112


state 94

   14 statement: INCR ID . SEMI

    SEMI  shift, and go to state 113


state 95

   16 statement: DECR ID . SEMI

    SEMI  shift, and go to state 114


state 96

   13 statement: ID INCR . SEMI

    SEMI  shift, and go to state 115


state 97

   15 statement: ID DECR . SEMI

    SEMI  shift, and go to state 116


state 98

   54 function_call: ID LPAREN . arguments RPAREN

    $default  reduce using rule 56 (arguments)

    arguments  go to state 117


state 99

   53 assignment: ID ASSIGN . expression

    INCR    shift, and go to state 19
    DECR    shift, and go to state 20
    NOTOP   shift, and go to state 21
    LPAREN  shift, and go to state 22
    ID      shift, and go to state 23
    ICONST  shift, and go to state 24
    FCONST  shift, and go to state 25
    CCONST  shift, and go to state 26

    expression  go to state 118
    exp         go to state 28
    term        go to state 29
    factor      go to state 30


state 100

    6 statement: declaration SEMI .

    $default  reduce using rule 6 (statement)


state 101

   26 variables: ID .
   27          | ID . ASSIGN expression

    ASSIGN  shift, and go to state 14

    $default  reduce using rule 26 (variables)


state 102

   10 statement: assignment SEMI .

    $default  reduce using rule 10 (statement)


state 103

   11 statement: function_call SEMI .

    $default  reduce using rule 11 (statement)


state 104

   32 if_statement: IF LPAREN expression . RPAREN LBRACE statements RBRACE
   33             | IF LPAREN expression . RPAREN LBRACE statements RBRACE else_if
   34             | IF LPAREN expression . RPAREN LBRACE statements RBRACE else_if ELSE LBRACE statements RBRACE
   35             | IF LPAREN expression . RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
   61 expression: expression . OROP exp
   62           | expression . ANDOP exp
   63           | expression . EQUOP exp
   64           | expression . NEQUOP exp
   65           | expression . GTEQ exp
   66           | expression . GT exp
   67           | expression . LTEQ exp
   68           | expression . LT exp

    OROP    shift, and go to state 41
    ANDOP   shift, and go to state 42
    EQUOP   shift, and go to state 43
    NEQUOP  shift, and go to state 44
    GTEQ    shift, and go to state 45
    GT      shift, and go to state 46
    LTEQ    shift, and go to state 47
    LT      shift, and go to state 48
    RPAREN  shift, and go to state 119


state 105

   52 while_statement: WHILE LPAREN expression . RPAREN LBRACE statements RBRACE
   61 expression: expression . OROP exp
   62           | expression . ANDOP exp
   63           | expression . EQUOP exp
   64           | expression . NEQUOP exp
   65           | expression . GTEQ exp
   66           | expression . GT exp
   67           | expression . LTEQ exp
   68           | expression . LT exp
